--- a/sample_form.html
+++ b/sample_form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+  <script scr ="index.js"></script>
 
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
